# indc

./: Cargo.toml  README.md  config.json  sample_config.json
src/: config_file_manager.rs  main.rs
src/api_managers/: fmp_api_manager.rs
src/models/: stock_profile.rs
